--- a/question2.html
+++ b/question2.html
@@ -54,7 +54,7 @@
     </header>
 
     <nav>
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="question1.html">Question1</a>
         <a href="question2.html">Question2</a>
     </nav>
