--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </header>
 
     <nav>
-        <a href="#home">Home</a>
+        <a href="#index">Home</a>
         <a href="question1.html">Question1</a>
         <a href="question2.html">Question2</a>
     </nav>
