--- a/question2.html
+++ b/question2.html
@@ -5,33 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Human Diversity Homepage</title>
     <style>
-        body {
+      body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f0f0f0;
+            background-color: #f4f4f9;
+            color: #333;
+            line-height: 1.6;
+            min-height: 400px;
+            margin-bottom: 100px;
+            clear: both;
         }
         header {
-            background-color: #F5F5DC;
-            color: black;
-            padding: 1em 0;
+            background-color: #0056b3;
+            color: white;
+            padding: 20px 0;
             text-align: center;
+        }
+        header h1 {
+            margin: 0;
         }
         nav {
             background-color: #333;
-            overflow: hidden;
+            color: white;
+            display: flex;
+            justify-content: center;
+            padding: 10px 0;
         }
         nav a {
-            float: left;
-            display: block;
             color: white;
-            text-align: center;
-            padding: 14px 20px;
             text-decoration: none;
+            margin: 0 15px;
+            padding: 10px 15px;
         }
         nav a:hover {
-            background-color: #ddd;
-            color: black;
+            background-color: #0056b3;
+            border-radius: 5px;
         }
         section {
             padding: 20px;
@@ -46,6 +55,22 @@
             bottom: 0;
             width: 100%;
         }
+        h1 {
+            text-align: center;
+        }
+        h2 {
+            text-align: center;
+        }
+        h3 {
+            text-align: center;
+        }
+        p {
+            margin-left: 50px;
+            text-align: left;
+        }
+        ul {
+            margin-left: 50px;
+        }
     </style>
 </head>
 <body>
@@ -59,14 +84,40 @@
         <a href="question2.html">Question2</a>
     </nav>
 
-    <section>
-        <h2>To what extent are human differences (in the areas of race) rooted in the body, i.e., biologically real?</h2>
-        <p>From the documentary we watched in class "The color of fear" they proved that genetics were not a part in race. As %99 of humans share the same genetic makeups with eachother.
-            And everything that we think is connected to race is lived through experince and time. Like the darker skin colors as they "evolved" to get better protection from the sun in areas
-            with more sunlight, while lighter skin was the opposite of that. They "evolved" in areas with less sunlight to absorb more vitamin D. Therefore race is not biologically real in any way,
-            And that it is a social construct made up by society.
-        </p>
-    </section>
+    <h1>Reflections on "The Color of Fear"</h1>
+    <p>From the documentary <em>The Color of Fear</em> we explored in class, a profound point was made: <strong>race is not biological</strong>. Studies reveal that <strong>99% of human genetic makeup is identical</strong>, regardless of external differences.</p>
+
+    <h2>The Evolutionary Context of Skin Color</h2>
+    <p>The physical traits we often associate with race, such as skin color, are results of environmental adaptations over time:</p>
+    <ul>
+        <li><strong>Darker skin tones</strong> evolved to offer better protection from the sun in regions with high UV exposure.</li>
+        <li><strong>Lighter skin tones</strong> evolved to absorb more vitamin D in areas with less sunlight.</li>
+    </ul>
+    <p>These differences are adaptive traits, not indicators of separate races. In essence, race is not biologically real; it is a <strong>social construct</strong>.</p>
+
+    <h2>What is a Social Construct?</h2>
+    <p>A social construct is a concept or perception created and agreed upon by society. It often includes stereotypes or generalizations about groups of people.</p>
+    <p>For example, in early America, laws differentiated between people of color and white individuals. Many white people perpetuated the belief that Black people were weaker. This belief was a social construct that shaped systemic discrimination. Without these constructs, society might not categorize or judge people based on race.</p>
+
+    <h2>Gender: A Mix of Biology and Social Influence</h2>
+    <p>When discussing gender, we encounter a blend of biological and societal elements:</p>
+    <ul>
+        <li><strong>Biological aspects of gender:</strong>
+            <ul>
+                <li>Males and females typically have distinct genitalia, identifiable at birth or in the womb.</li>
+            </ul>
+        </li>
+        <li><strong>Choice and gender identity:</strong> While gender is rooted in biology, individuals can choose to undergo gender transition procedures to align with their personal identity.</li>
+    </ul>
+
+    <h2>Sexual Orientation and Social Constructs</h2>
+    <p>Sexual orientation, on the other hand, is less about biology and more about personal choice and societal influence. Historically, social constructs stigmatized same-sex relationships or gender transitions. However, society is increasingly open to conversations about:</p>
+    <ul>
+        <li>Gender identity and transitioning.</li>
+        <li>Acceptance of same-sex relationships and marriages.</li>
+    </ul>
+
+    <p>By examining these ideas, we can better understand how social constructs shape our perceptions and how societal change allows for more inclusive discussions on identity and equality.</p>
     <footer>
         <p>&copy; 2024 Human Diversity Project | University of Minnesota Duluth (student)</p>
     </footer>
