--- a/index.html
+++ b/index.html
@@ -3,94 +3,124 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Human Diversity Homepage</title>
+    <title>Human Diversity Class</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f0f0f0;
-            min-height: 400px;
-            margin-bottom: 100px;
-            clear: both;
+            background-color: #f4f4f9;
+            color: #333;
+            line-height: 1.6;
         }
         header {
-            background-color: #F5F5DC;
-            color: black;
-            padding: 1em 0;
+            background-color: #0056b3;
+            color: white;
+            padding: 20px 0;
             text-align: center;
+        }
+        header h1 {
+            margin: 0;
         }
         nav {
             background-color: #333;
-            overflow: hidden;
+            color: white;
+            display: flex;
+            justify-content: center;
+            padding: 10px 0;
         }
         nav a {
-            float: left;
-            display: block;
             color: white;
-            text-align: center;
-            padding: 14px 20px;
             text-decoration: none;
+            margin: 0 15px;
+            padding: 10px 15px;
         }
         nav a:hover {
-            background-color: #ddd;
-            color: black;
+            background-color: #0056b3;
+            border-radius: 5px;
         }
-        section {
+        .container {
+            max-width: 1100px;
+            margin: 20px auto;
+            padding: 20px;
+            background: white;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+        }
+        .intro {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .intro h2 {
+            margin: 0;
+            color: #0056b3;
+        }
+        .cards {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            justify-content: center;
+        }
+        .card {
+            background: #f9f9f9;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             padding: 20px;
             text-align: center;
+            flex: 1 1 calc(33.333% - 40px);
+            max-width: calc(33.333% - 40px);
+        }
+        .card h3 {
+            margin-top: 0;
+            color: #0056b3;
+        }
+        .card p {
+            font-size: 0.9em;
         }
         footer {
-            background-color: #333;
-            color: white;
             text-align: center;
             padding: 10px 0;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
+            background: #333;
+            color: white;
+            margin-top: 20px;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Human Diversity (Very rough) Final Project</h1>
-        <p>Coded by: Adam Dodge</p>
+        <h1>Welcome to My Human Diversity Final Website</h1>
     </header>
-
     <nav>
-        <a href="#index">Home</a>
-        <a href="question1.html">Question1</a>
-        <a href="question2.html">Question2</a>
+        <a href="index.html">Homepage</a>
+        <a href="question1.html">Question 1</a>
+        <a href="question2.html">Question 2</a>
     </nav>
-
-    <section id="home">
-        <h2>Home</h2>
-        <p>This is the homepage, i dont really know what to put here but ill figure something out for the final product.</p>
-        <p>(links to other pages are on the top left)</p>
-    </section>
-
-    <section id="question1">
-        <h2>Question 1</h2>
-        <p>Here you'll find the answer to question 1 of our essential questions</p>
-    </section>
-
-    <section id="question2">
-        <h2>Question 2</h2>
-        <p>Here you'll find the answer to question 2 of our essential questions</p>
-    </section>
-
-    <section id="references">
-        <h2>ALOT MORE TO BE WORKED ON</h2>
-        <p>I still have alot more planned for this website to make it look more pleasing to the eye.</p>
-    </section>
-
-    <section>
-        <h2>References</h2>
-        <p>This page will eventually have all the content used in this class for my Project</p>
-    </section>
-
+    <div class="container">
+        <section class="intro">
+            <h2>Exploring Diversity and Inclusion</h2>
+            <p>Welcome to our Human Diversity class website, where we examine the beauty and challenges of diversity in human society. This is your hub for class materials, resources, and discussions.</p>
+        </section>
+        <section id="topics">
+            <h2>Class Topics</h2>
+            <div class="cards">
+                <div class="card">
+                    <h3>Race & Ethnicity</h3>
+                    <p>Understanding the social construct of race and its impact on identity and society.</p>
+                </div>
+                <div class="card">
+                    <h3>Gender & Sexuality</h3>
+                    <p>Exploring gender identities, roles, and the spectrum of human sexuality.</p>
+                </div>
+                <div class="card">
+                    <h3>Cultural Awareness</h3>
+                    <p>Learning to appreciate and respect diverse cultural traditions and practices.</p>
+                </div>
+            </div>
+        </section>
+    </div>
     <footer>
-        <p>&copy; 2024 Human Diversity Project | University of Minnesota Duluth (student)</p>
+        <p>&copy; 2024 Human Diversity Class. All rights reserved.</p>
     </footer>
 </body>
 </html>
