--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <h1>Welcome to My Human Diversity Final Website</h1>
     </header>
     <nav>
-        <a href="index.html">Homepage</a>
+        <a href="index.html">Home</a>
         <a href="question1.html">Question 1</a>
         <a href="question2.html">Question 2</a>
     </nav>
