final final final

--- a/question2.html
+++ b/question2.html
@@ -47,13 +47,11 @@
             text-align: center;
         }
         footer {
-            background-color: #333;
-            color: white;
             text-align: center;
             padding: 10px 0;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
+            background: #333;
+            color: white;
+            margin-top: 20px;
         }
         h1 {
             text-align: center;
@@ -119,6 +117,6 @@
 
     <p>By examining these ideas, we can better understand how social constructs shape our perceptions and how societal change allows for more inclusive discussions on identity and equality.</p>
     <footer>
-        <p>&copy; 2024 Human Diversity Project | University of Minnesota Duluth (student)</p>
+        <p>&copy; 2024 Human Diversity Class. All rights reserved.</p>
     </footer>
 </body>
