--- a/question1.html
+++ b/question1.html
@@ -43,13 +43,11 @@
             border-radius: 5px;
         }
         footer {
-            background-color: #333;
-            color: white;
             text-align: center;
             padding: 10px 0;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
+            background: #333;
+            color: white;
+            margin-top: 20px;
         }
         h1 {
             text-align: center;
@@ -178,7 +176,7 @@
 
 
     <footer>
-        <p>&copy; 2024 Human Diversity Project | University of Minnesota Duluth (student)</p>
+        <p>&copy; 2024 Human Diversity Class. All rights reserved.</p>
     </footer>
 </body>
 
