--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
             color: white;
             margin-top: 20px;
         }
+        h2 {
+            text-align: center;
+        }
     </style>
 </head>
 <body>
